# pytanis

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-dev-docs.yml  build-rel-docs.yml  publish-pkg.yml  run-tests.yml
0.0/: 404.html  objects.inv  sitemap.xml
0.0/authors/: index.html
0.0/changelog/: index.html
0.0/license/: index.html
0.0/reference/pytanis/: index.html
0.0/search/: search_index.json
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/authors/: index.html
0.1/changelog/: index.html
0.1/contributing/: index.html
0.1/license/: index.html
0.1/reference/pytanis/: index.html
0.1/usage/installation/: index.html
0.1/usage/review/: index.html
0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2/authors/: index.html
0.2/changelog/: index.html
0.2/contributing/: index.html
0.2/license/: index.html
0.2/reference/pytanis/: index.html
0.2/search/: search_index.json
0.2/snippets/: links.txt
0.2/usage/installation/: index.html
0.2/usage/pretalx/: index.html
0.2/usage/review/: index.html
0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3/authors/: index.html
0.3/changelog/: index.html
0.3/contributing/: index.html
0.3/license/: index.html
0.3/reference/SUMMARY/: index.html
0.3/reference/pytanis/: index.html
0.3/search/: search_index.json
0.3/usage/gsheet/: index.html
0.3/usage/installation/: index.html
0.3/usage/mail/: index.html
0.3/usage/pretalx/: index.html
0.3/usage/review/: index.html
0.4/: 404.html  index.html  sitemap.xml
0.4/authors/: index.html
0.4/changelog/: index.html
0.4/contributing/: index.html
0.4/license/: index.html
0.4/reference/SUMMARY/: index.html
0.4/reference/pytanis/: index.html
0.4/tasks/cfp/: index.html
0.4/tasks/review/: index.html
0.4/tasks/selection/: index.html
0.4/usage/gsheet/: index.html
0.4/usage/installation/: index.html
0.4/usage/mail/: index.html
0.4/usage/pretalx/: index.html
0.5/: 404.html  index.html  objects.inv  sitemap.xml
0.5/authors/: index.html
0.5/changelog/: index.html
0.5/contributing/: index.html
0.5/license/: index.html
0.5/reference/SUMMARY/: index.html
0.5/reference/pytanis/: index.html
0.5/snippets/: links.txt
0.5/tasks/cfp/: index.html
0.5/tasks/review/: index.html
0.5/tasks/schedule/: index.html
0.5/tasks/selection/: index.html
0.5/usage/gsheet/: index.html
0.5/usage/installation/: index.html
0.5/usage/mail/: index.html
0.5/usage/pretalx/: index.html
0.6/: 404.html  index.html  objects.inv  sitemap.xml
0.6/authors/: index.html
0.6/changelog/: index.html
0.6/contributing/: index.html
0.6/license/: index.html
0.6/reference/SUMMARY/: index.html
0.6/reference/pytanis/: index.html
0.6/search/: search_index.json
0.6/tasks/cfp/: index.html
0.6/tasks/review/: index.html
0.6/tasks/schedule/: index.html
0.6/tasks/selection/: index.html
0.6/usage/gsheet/: index.html
0.6/usage/installation/: index.html
0.6/usage/mail/: index.html
0.6/usage/pretalx/: index.html
0.7/: 404.html  index.html  sitemap.xml
0.7/authors/: index.html
0.7/changelog/: index.html
0.7/contributing/: index.html
0.7/license/: index.html
0.7/reference/SUMMARY/: index.html
0.7/reference/pytanis/: index.html
0.7/search/: search_index.json
0.7/snippets/: links.txt
0.7/tasks/cfp/: index.html
0.7/tasks/review/: index.html
0.7/tasks/schedule/: index.html
0.7/tasks/selection/: index.html
0.7/usage/gsheet/: index.html
0.7/usage/installation/: index.html
0.7/usage/mail/: index.html
0.7/usage/pretalx/: index.html
authors/: index.html
changelog/: index.html
contributing/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/authors/: index.html
dev/changelog/: index.html
dev/contributing/: index.html
dev/license/: index.html
dev/reference/SUMMARY/: index.html
dev/reference/pytanis/: index.html
dev/scripts/: set_release_version.py
dev/search/: search_index.json
dev/snippets/: links.txt
dev/tasks/cfp/: index.html
dev/tasks/review/: index.html
dev/tasks/schedule/: index.html
dev/tasks/selection/: index.html
dev/usage/gsheet/: index.html
docs/: index.md
docs/snippets/: links.txt
docs/tasks/: cfp.md  review.md  schedule.md  selection.md
docs/usage/: gsheet.md  installation.md  mail.md  pretalx.md  review.md
latest/: 404.html  index.html  sitemap.xml
latest/authors/: index.html
latest/changelog/: index.html
latest/contributing/: index.html
latest/license/: index.html
latest/search/: search_index.json
latest/snippets/: links.txt
license/: index.html
notebooks/: template.ipynb
notebooks/pyconde-pydata-berlin-2023/: 01_reviewer-assignment_v1.ipynb  01_reviewer-assignment_v2.ipynb  02_mail_to_reviewers_v1.ipynb  10_reviewer-assignment_v1.ipynb  10_reviewer-assignment_v2.ipynb  20_mail_to_reviewers_v1.ipynb  30_selection_v1.ipynb  40_talk_image_v1.ipynb  50_scheduling.ipynb  50_scheduling_v1.ipynb  60_agenda_export_v1.ipynb
notebooks/pyconde-pydata-berlin-2024/: 10_selection_v1.ipynb  20_mail_to_reviewers_v1.ipynb  30_reviewer-assignment_v1.ipynb  40_scheduling_v1.ipynb
reference/SUMMARY/: index.html
reference/pytanis/: index.html
requirements/: requirements-docs.txt  requirements-lint.txt
scripts/: set_release_version.py
src/pytanis/: __init__.py  config.py  google.py  helpdesk.py  highs.py  pretalx.py  review.py  utils.py
tasks/cfp/: index.html
tasks/review/: index.html
tasks/schedule/: index.html
tasks/selection/: index.html
tests/: conftest.py  test_config.py  test_pretalx.py
tests/cfgs/: client_secret.json  config.toml
tests/helpdesk/: test_mail.py
tests/pretalx/: test_client.py
usage/gsheet/: index.html
usage/installation/: index.html
usage/mail/: index.html
usage/pretalx/: index.html
(+157 files in other folders)
